force-app/main/default/objects/Reminder__mdt/Reminder__mdt.object-meta.xml
<CustomObject>
    <description>custom metadata para controlar las configuraciones de los recordatorios</description>
    <label>Recordatorios</label>
    <pluralLabel>Reminders</pluralLabel>
</CustomObject>