force-app/main/default/objects/Reminder__mdt/fields/Aviso_estado_ejecucion__c.field-meta.xml
<CustomField>
    <fullName>Aviso_estado_ejecucion__c</fullName>
    <description>Configuración de cuantos días de espera tienen que esperar en el estado de ejecución.</description>
    <label>Aviso Ejecución</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>