force-app/main/default/objects/Reminder__mdt/fields/Dias_posteriores_oferta__c.field-meta.xml
<CustomField>
    <fullName>Dias_posteriores_oferta__c</fullName>
    <label>Días Posteriores Oferta</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>