force-app/main/default/objects/Reminder__mdt/fields/Dias_previos_oferta__c.field-meta.xml
<CustomField>
    <fullName>Dias_previos_oferta__c</fullName>
    <description>Configuración de cuántos días previos se lanzará el recordatorio de oferta.</description>
    <label>Días Previos Oferta</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>